--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -3,7 +3,7 @@ name: Node.js CI
 on:
   push:
     branches:
-      - gh_pages  # You can change this to the branch you want to trigger the workflow
+      - main  # You can change this to the branch you want to trigger the workflow
 
 jobs:
   build:
