--- a/.github/workflows/gh_pages.yml
+++ b/.github/workflows/gh_pages.yml
@@ -1,34 +1,25 @@
-name: Node.js CI
-
+name: DevOps Lab Exercise
 on:
   push:
-    branches:
-      - main  # You can change this to the branch you want to trigger the workflow
+    branches: [ "main" ]
+  pull_request:
+    branches: [ "main" ]
 
 jobs:
   build:
-    runs-on: ubuntu-latest  # You can choose a different operating system if needed
-
+    runs-on: ubuntu-latest
     steps:
-    - name: Checkout code
-      uses: actions/checkout@v2  # Action to checkout the code from the repository
-
-    - name: Setup Node.js
-      uses: actions/setup-node@v2  # Action to set up Node.js environment
-      with:
-        node-version: '14'  # You can change this to the version you want to use
-
-    - name: Install dependencies
-      run: npm install
-
-    - name: Build
-      run: npm run build
-
-    - name: Move index.html to 404.html
-      run: mv build/index.html build/404.html
-
-    - name: Deploy to GitHub Pages
-      uses: peaceiris/actions-gh-pages@v3  # Action to deploy to GitHub Pages
-      with:
-        github_token: ${{ secrets.GITHUB_TOKEN }}
-        publish_dir: ./build
+      - name: Checkout code
+        uses: actions/checkout@v4
+      - name: Use Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: '20.10'
+      # - run: npm ci
+      - run: npm run build --if-present
+      - run: npm test
+      - name: Deploy to GitHub Pages
+        uses: peaceiris/actions-gh-pages@v3
+        with:
+          github_token: ${{ secrets.GITHUB_TOKEN }}
+          publish_dir: ./build
