--- a/.travis.yml
+++ b/.travis.yml
@@ -12,11 +12,11 @@ cache:
 
 install:
   - npm install
-  - npm install -g yarn
+  #- npm install -g yarn
 
 script:
   #- yarn lint
-  - yarn build
+  - npm build
   #- mv build/index.html build/404.html
 deploy:
   provider: pages
