--- a/.travis.yml
+++ b/.travis.yml
@@ -17,8 +17,8 @@ install:
 
 script:
   #- yarn lint
-  - npm build
-  #- mv build/index.html build/404.html
+  - yarn build
+  - mv build/index.html build/404.html
 deploy:
   provider: pages
   skip_cleanup: true
