--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,5 @@
 language: node_js
-dist: jammy
+dist: focal
 node_js:
   - "stable"
 
@@ -13,7 +13,7 @@ cache:
 
 install:
   - npm install
-  #- npm install -g yarn
+  - npm install -g yarn
 
 script:
   #- yarn lint
